a bit further along

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,48 @@
 		<title>Extra Crusty</title>
 	</head>
 	<body>
-		<h1>Extra Crusty</h1>
-		<p>Under construction ...</p>
+		<main>
+			<div class="flex flex-center welcome">
+				<img src="./images/background-pizza-vinicius-benedit.jpg" />
+				<h1>Welcome</h1>
+			</div>
+			<div class="grid quick-menu">
+				<button>
+					<img src="./images/menu_hamburger.svg" alt="menu" />
+					<div>Create your own Pizza</div>
+				</button>
+				<button>
+					<img src="./images/menu_hamburger.svg" alt="menu" />
+					<div>Menu</div>
+				</button>
+				<button>
+					<img src="./images/menu_hamburger.svg" alt="menu" />
+					<div>Quick Order</div>
+				</button>
+				<button>
+					<img src="./images/menu_hamburger.svg" alt="menu" />
+					<div>Login</div>
+				</button>
+			</div>
+			<div class="flex-column welcome-text">
+				<p>Lorem ipsum?</p>
+				<p>Dolor sit amet!</p>
+				<p>
+					Consectetur adipisicing elit. Architecto temporibus quos veritatis minima magnam sed qui aperiam
+					dolore vitae, illum impedit inventore suscipit blanditiis ipsum porro ad quaerat, ducimus a rerum.
+					Quidem incidunt velit, cumque temporibus officia eius.
+				</p>
+				<p>Odio sed rerum aspernatur est? Dicta nobis corporis.</p>
+				<p>Atque, optio!</p>
+				<p>
+					Omnis ipsam quasi delectus a totam officiis perferendis dolor neque alias fugit. Doloremque qui
+					voluptatibus architecto quibusdam. Inventore, dolores officiis ducimus, minus labore possimus
+					voluptates voluptate vel accusantium fuga totam delectus tempore doloremque iure similique ipsa.
+					Recusandae placeat sunt tenetur eveniet aperiam, consectetur autem exercitationem in non minus
+					commodi.
+				</p>
+				<p>Sed delectus voluptate nobis ut!</p>
+			</div>
+		</main>
 	</body>
 </html>
