--- a/public/index.html
+++ b/public/index.html
@@ -5,52 +5,13 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="./css/style.css" />
-		<script type="module" src="./scripts/script.js"></script>
 		<title>Extra Crusty</title>
 	</head>
-	<body>
-		<main>
-			<div class="flex flex-center welcome">
-				<img src="./images/background-pizza-vinicius-benedit.jpg" />
-				<h1>Welcome</h1>
-			</div>
-			<div class="grid quick-menu">
-				<button>
-					<img src="./images/menu_hamburger.svg" alt="menu" />
-					<div>Create your own Pizza</div>
-				</button>
-				<button>
-					<img src="./images/menu_hamburger.svg" alt="menu" />
-					<div>Menu</div>
-				</button>
-				<button>
-					<img src="./images/menu_hamburger.svg" alt="menu" />
-					<div>Quick Order</div>
-				</button>
-				<button>
-					<img src="./images/menu_hamburger.svg" alt="menu" />
-					<div>Login</div>
-				</button>
-			</div>
-			<div class="flex-column welcome-text">
-				<p>Lorem ipsum?</p>
-				<p>Dolor sit amet!</p>
-				<p>
-					Consectetur adipisicing elit. Architecto temporibus quos veritatis minima magnam sed qui aperiam
-					dolore vitae, illum impedit inventore suscipit blanditiis ipsum porro ad quaerat, ducimus a rerum.
-					Quidem incidunt velit, cumque temporibus officia eius.
-				</p>
-				<p>Odio sed rerum aspernatur est? Dicta nobis corporis.</p>
-				<p>Atque, optio!</p>
-				<p>
-					Omnis ipsam quasi delectus a totam officiis perferendis dolor neque alias fugit. Doloremque qui
-					voluptatibus architecto quibusdam. Inventore, dolores officiis ducimus, minus labore possimus
-					voluptates voluptate vel accusantium fuga totam delectus tempore doloremque iure similique ipsa.
-					Recusandae placeat sunt tenetur eveniet aperiam, consectetur autem exercitationem in non minus
-					commodi.
-				</p>
-				<p>Sed delectus voluptate nobis ut!</p>
-			</div>
-		</main>
+	<body class="flex flex-center">
+		<img src="./images/background-pizza.jpg" />
+		<div class="flex-column flex-center gap2">
+			<h1>Welcome</h1>
+			<p>Under development ...</p>
+		</div>
 	</body>
 </html>
