--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	
-	<div id="root" style="display: flex;"></div>
+	<div id="root"></div>
 	<script type="module" src="script.js"></script>
 </body>
 </html>
