--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,5 @@
 		<link rel="stylesheet" href="./css/style.css" />
 		<title>Extra Crusty</title>
 	</head>
-	<body class="flex flex-center">
-		<img src="./images/background-pizza.jpg" />
-		<div class="flex-column flex-center gap2">
-			<h1>Welcome</h1>
-			<p>Under development ...</p>
-		</div>
-	</body>
+	<body></body>
 </html>
