--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
 	
-	<div id="root"></div>
+	<div id="root">
+	</div>
 	<script type="module" src="script.js"></script>
 </body>
 </html>
